# cxx_lib_template

./: README.md
testapp/: CMakeLists.txt
testapp/src/: main.cpp
testlib/: CMakeLists.txt  testlib-config.cmake.in  testlib.pc.in
testlib/include/: api1.h
testlib/install/include/: .api2.h.swp  api2.h
testlib/install/lib/: libtestlib.1.0.1.dylib  libtestlib.1.dylib  libtestlib.dylib  testlib-config.cmake  testlib-noconfig.cmake  testlib.cmake
testlib/install/share/pkgconfig/: testlib.pc
testlib/src/: api1.cpp  api2.cpp
